# req2code

./: .gitignore  README.md  analyzer_js.py  analyzer_py.py  main.py  package-lock.json  package.json  pyproject.toml  query_requirement.py  setup_repository.py  utils.py  vite-import-graphs.ipynb
explanation/: Architecture.excalidraw  EXPLANATION.md
